--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,8 +44,40 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".LocationActivity" />
-        <activity android:name=".SearchForInstructorActivity"
-            android:exported="true"></activity>
+        <activity
+            android:name=".SearchForInstructorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".instructor_main"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".blackboard"
+            android:label="@string/title_activity_blackboard"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".schedule"
+            android:label="@string/title_activity_schedule"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".reservations"
+            android:label="@string/title_activity_reservations"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".notifications"
+            android:label="@string/title_activity_notifications"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".settings"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".editSpots"></activity>
     </application>
 
 </manifest>
