--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,15 +47,11 @@
         <activity
             android:name=".SearchForInstructorActivity"
             android:exported="true" />
+
         <activity
             android:name=".instructor_main"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".blackboard"
@@ -77,7 +73,9 @@
             android:name=".settings"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".editSpots"></activity>
+        <activity android:name=".editSpots"/>
+
+
     </application>
 
 </manifest>
