--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         <activity
             android:name=".instructor_main"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".blackboard"
             android:label="@string/title_activity_blackboard"
@@ -75,11 +75,11 @@
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".editSpots" />
+        <activity android:name=".ViewInstructorProfile" />
 
-        <activity android:name=".ViewInstructorProfile"></activity>
         <service android:name=".FCMService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
@@ -99,9 +99,12 @@
             android:name=".student_main"
             android:label="ITeach"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".blackboard2"
+        <activity
+            android:name=".blackboard2"
             android:label="@string/title_activity_blackboard"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".answerActivity" />
+        <activity android:name=".askActivity"></activity>
     </application>
 
 </manifest>
