--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,8 @@
         <activity android:name=".blackboard2"
             android:label="@string/title_activity_blackboard"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".ReserveInfo"/>
+        <activity android:name=".Reserve"/>
     </application>
 
 </manifest>
