--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,7 +111,8 @@
         <activity
             android:name=".PaymentActivity"
             android:exported="true" />
-        <activity android:name=".resetPassword"></activity>
+        <activity android:name=".resetPassword" />
+        <activity android:name=".myQuestions"></activity>
     </application>
 
 </manifest>
