--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAYNCDRkaIY9Zx_yignUVIajUSbiXtSAIA" />
+        <meta-data
+            android:name="com.google.android.gms.wallet.api.enabled"
+            android:value="true" />
 
         <activity
             android:name=".MapsActivity"
@@ -112,12 +115,13 @@
             android:name=".PaymentActivity"
             android:exported="true" />
         <activity android:name=".resetPassword" />
-        <activity android:name=".myQuestions"></activity>
-
+        <activity android:name=".myQuestions" />
         <activity android:name=".AdvancedSearch" />
-        <activity android:name=".AdminActivity"
+        <activity
+            android:name=".AdminActivity"
             android:exported="true" />
-        <activity android:name=".InstructorActivity"></activity>
+        <activity android:name=".InstructorActivity" />
+        <activity android:name=".StudentActivity"></activity>
     </application>
 
 </manifest>
