--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,11 +121,9 @@
             android:name=".AdminActivity"
             android:exported="true" />
         <activity android:name=".InstructorActivity" />
-
-        <activity android:name=".filterQuestions"></activity>
-
-        <activity android:name=".StudentActivity"></activity>
-
+        <activity android:name=".filterQuestions" />
+        <activity android:name=".StudentActivity" />
+        <activity android:name=".adminBlackboard"></activity>
     </application>
 
 </manifest>
