--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.firebaseui:firebase-ui-database:4.2.0'
 
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
