--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,19 +120,11 @@
             android:name=".AdminActivity"
             android:exported="true" />
         <activity android:name=".InstructorActivity" />
-
-        <activity android:name=".EditLesson"></activity>
-
-
+        <activity android:name=".EditLesson" />
         <activity android:name=".filterQuestions" />
-        
         <activity android:name=".StudentActivity" />
-        <activity android:name=".adminBlackboard"></activity>
-
-
-
-
-
+        <activity android:name=".adminBlackboard" />
+        <activity android:name=".askActivity2"></activity>
     </application>
 
 </manifest>
