--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
             android:name=".SearchForInstructorActivity"
             android:exported="true" />
         <activity
+            android:name=".SearchResultsActivity"
+            android:exported="true" />
+        <activity
             android:name=".instructor_main"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
@@ -122,7 +125,6 @@
         <activity android:name=".StudentActivity" />
         <activity android:name=".adminBlackboard" />
         <activity android:name=".askActivity2" />
-        <activity android:name=".SubjectActivity" />
         <activity android:name=".answerAdmin"></activity>
     </application>
 
