--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,7 +125,9 @@
         <activity android:name=".StudentActivity" />
         <activity android:name=".adminBlackboard" />
         <activity android:name=".askActivity2" />
-        <activity android:name=".answerAdmin"></activity>
+        <activity android:name=".answerAdmin" />
+        <activity android:name=".editProfile" />
+        <activity android:name=".editProfile2"></activity>
     </application>
 
 </manifest>
